# tomb-escape

./: Cargo.toml  README.md  build.rs  gba.ld  gba_mb.ld
gfx/: big_sprites.aseprite  coffin.aseprite  font.aseprite  sprites.aseprite  tileset.aseprite  tileset.toml  title.aseprite  ui_cards.aseprite
src/: entity.rs  game.rs  gfx.rs  lib.rs  main.rs  timer.rs  world.rs
tiles/: ground-tileset-with-types.tsx  ground-tileset.tsx  main.tmx
